kubernetes/workloads/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-service
  namespace: media
spec:
  selector:
    app: readarr
  ports:
    - port: 8787
      targetPort: http
